Fri  Aug 26 2005	H. Wade Minter (minter@lunenburg.org)
     * Only do the online version check if online functionality is enabled.

Sun  Aug 14 2005	H. Wade Minter (minter@lunenburg.org)
     * Fix a bug where having Mr. Voice Online version check enabled without
       a working internet connection would prevent the application from 
       starting.  Reported by Tim in Richmond.

Sun  Aug  7 2005	H. Wade Minter (minter@lunenburg.org)
     * Fix a bug where searching for a string with an apostrophe in it would
       cause an error.
     * Refactor database calls to either use placeholders or $dbh->quote()

Mon  Aug  1 2005	H. Wade Minter (minter@lunenburg.org)
     * Fix bugs where a Bundle wouldn't have all the required information.
     * Improve the Holding Tank bundle export code, so that it will write a
       unique filename, instead of overwriting an existing bundle file.
     * Tag 2.1

Fri  Jul 29 2005	H. Wade Minter (minter@lunenburg.org)
     * Add debugging to get_md5 subroutine.
     * Remove dbh quoting in bulk_add, since using placeholders in the 
       statement handle takes care of that anyway.
     * Fix a bug in getting the MD5 for the bulk-added file.

Mon  Jul 25 2005	H. Wade Minter (minter@lunenburg.org)
     * Bump version to 2.0.9c (final beta?)

Sun  Jul 24 2005	H. Wade Minter (minter@lunenburg.org)
     * Fix a bug that would cause a crash if you tried to drop a song into
       the holding tank that already existed there.  Thanks to Lanny in Dallas.

Tue  Jul  5 2005	H. Wade Minter (minter@lunenburg.org)
     * Begin pointing to mrvoice.net URL.

Sun  May 29 2005	H. Wade Minter (minter@lunenburg.org)
     * Fixed a bulk-add bug.  Reported by Rob in Richmond.
     * Add a status bar to the online search window.  Requested by
       Lanny in Dallas.
     * Add new logo to the About box, Windows icon, and XPM icon.
     * Use MP3::Info instead of MPEG::MP3Info.
     * Specify binmode explicitly when dealing with binary data.